# DeskLab

./: README.md  pyproject.toml
src/desklab/: __init__.py
src/desklab/_check/: __init__.py  _class.py  _parameter.py  _type.py  _value.py
src/desklab/_utils/: __init__.py  _imageio_ffmpeg_exe.py
src/desklab/areas/: __init__.py  _area_interface.py  _clickable_area.py  _rectangular_area.py
src/desklab/components/: _button.py  _drag_drop.py  _drawing_area.py  _text.py  _text_input.py  _window.py
src/desklab/containers/: _flexbox.py  _flexbox_interface.py  _protected_flexbox.py
src/desklab/entity_types/: _colorable.py  _containable.py  _dimensionable.py  _event_sensitive.py  _positionable.py
src/desklab/exceptions/: __init__.py  _exceptions.py
src/desklab/listeners/: _hover.py  _protected_listener.py  _system_listener.py
src/desklab/media/: _audio.py  _image.py
src/desklab/primitives/: _color.py  _font.py
src/desklab/system/: _clipboard.py  _keyboard.py  _mouse.py
src/labweb/: __init__.py  area.py  art.py  drag_drop.py  entities.py  event_listener.py  text.py  text_input.py  window.py
src/labweb/_utils/: __init__.py  _geometry.py
src/labweb/areas/: __init__.py  _clickable_area.py  _interface.py  _rectangular_area.py
src/labweb/components/: __init__.py  _button.py  _drag_drop.py  _drawing_area.py  _text.py  _text_input.py  _window.py  art.py  button.py  drag_drop.py  text_input.py
src/labweb/containers/: __init__.py  _clickable_flexbox.py  _constants.py  _flexbox.py  _flexbox_interface.py  _protected_flexbox.py  flex_container_interface.py  (+5 more)
(+41 files in other folders)
