[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "desklab"
version = "0.1.5"
description = "Simple and easy to use interface package"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Jonatas Cortes"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pygame==2.6.1",
    "pynput==1.8.1",
    "pyobjc-core==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-ApplicationServices==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-CoreText==12.1; sys_platform == 'darwin'",
    "pyobjc-framework-Quartz==12.1; sys_platform == 'darwin'",
    "pyperclip==1.11.0",
    "six==1.17.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"desklab._assets" = ["*"]